--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Download soft and patch Spotify</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 text-center">
-        <div class="alert alert-success" role="alert">
-          <strong>Download spotify!</strong> <a href="http://upfile.vn/7CXmuaXmNrLg/spotifysetup-exe.html" class="alert-link">download here !</a>
-        </div>
+      <div class="col-md-12">
+        <img src="./img/spotify.png" class="img-fluid rouned" alt="">
       </div>
-
-      <div class="col-md-12 text-center">
-        <div class="alert alert-primary" role="alert">
-          <strong>Download patch</strong> <a href="http://upfile.vn/jsGmZqXtKqBC/patch-quang-cao-spotify-bat.html" class="alert-link">download here !</a>
+      <div class="mt-5 col-md-12 text-center">
+        <div class="alert" role="alert">
+          <strong class="text text-uppercase"><a href="https://github.com/dungnt11/music-redirect/raw/master/spotify%20premium%20for%20pc.zip" class="alert-link">Download here !</a></strong> 
         </div>
       </div>
     </div>
