update fix some err

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Download soft and patch Spotify</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src="./img/spotify.png" class="img-fluid rouned" alt="">
+        <img src="img/spotify.png" class="img-fluid rouned" alt="">
       </div>
       <div class="mt-5 col-md-12 text-center">
         <div class="alert" role="alert">
